# desktop-toontalk

./: .gitignore  IMPLEMENTATION_EXAMPLE.md  LICENSE  PORTING_GUIDE.md  RESTART_PLAN.md  build-wasm.sh
M25/: ALIEN.TTS  BACKWALL.TTS  BALL.TTS  BIRD.TTS  BOMB.TTS  COPIER.TTS  CUBBY.TTS  DIZHAIR.TTS  DOORA.TTS  DOORB.TTS  DOORC.TTS  EXPLODE.TTS  FLOWER.TTS  HAIR.TTS  HAND.TTS  HAT.TTS  HELIOFLY.TTS  HITMISS.TTS  HOUSEAS.TTS  HOUSEBT.TTS  HOUSECS.TTS  HOUSECT.TTS  LFTCRNR.TTS  LIGHT.TTS  MANSIT.TTS  MOUSEHAM.TTS  NEST.TTS  NOTEBOOK.TTS  NOTEPAGE.TTS  PADDLE.TTS  ROBOT.TTS  ROCKDOOR.TTS  ROOMDOOR.TTS  SCALE.TTS  SWITCH.TTS  TALKBAL.TTS  TOOLBOXA.TTS  TOOLBOXS.TTS  TREE.TTS  TRUCKA.TTS  (+4 more)
ToonTalk-website/: CNAME  ChaseMovieDemo.tt  ChaseMovieDemo.txt  FactorialDemo.htm  FactorialDemo.tt  FactorialDemo.txt  FibonacciNumbers.tt  FibonacciNumbers.txt  PongDemo.tt  PongDemo.txt  SentenceMakerDemo.tt  SentenceMakerDemo.txt  arrayget.tt  basic_dusty.dmo  basic_pumpy.dmo  behave.txt  bhtacc.ess  bird_t_shirt.dmo  box_basics.dmo  box_coercion.dmo  canyon.txt  combining_nests.dmo  common.js  course.htm  dfact.txt  dialog.css  express.tt  fact.tt  fraction_formats.dmo  gates.tt  index.html  (+51 more)
web/core/: CMakeLists.txt  CMakeLists_v2.txt  README-BUILD.md  README-WINDOWS.md  build-windows.bat  build.ps1  build.sh  core.cpp  objects.cpp  python-wrapper.sh  serve.bat  serve.sh  setup-emsdk-windows.sh  setup-emsdk.sh  sprite.cpp  sprite.h  test.html  test_platform.cpp
web/core/minimal/: number.cpp  number.h
web/core/platform/: platform.cpp  platform.h
web/core/stubs/: windows_stubs.cpp
(+2252 files in other folders)
